# cerberus-api

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs  go.mod
.github/workflows/: check-generate.yml
examples/: basic.rs  signature_request.rs
pkg/api/v1/: key_manager.pb.go  key_manager.pb.gw.go  key_manager_grpc.pb.go  signer.pb.go  signer.pb.gw.go  signer_grpc.pb.go
proto/: buf.gen.yaml  key_manager.proto  signer.proto
src/: lib.rs
swagger/: grpc.swagger.yaml
