[package]
name = "cerberus-api"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Layr-Labs/cerberus-api"
authors = ["all@eigenlabs"]
license-file = "LICENSE"
rust-version = "1.82.0"
description = "API specification for cerberus remote signer"
readme = "README.md"
homepage = "https://github.com/Layr-Labs/cerberus-api"
keywords = ["bn254", "signer"]

# Exclude unnecessary files from the package
exclude = [
    "/.github/*",
    "/.idea/*",
    "/examples/*",
    "*.proto",
    "/proto/*",
    "/pkg/*",
    "go.sum",
    "go.mod",
    "build.rs",
    "/target/*"
]

[lib]
name = "cerberus_api"
path = "src/lib.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.37.0", features = ["test-util", "full", "sync"] }
futures = "0.3"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9"